app/styles/app.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
img,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;

}

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */


body {
    /* IE9+10 do not support rem units in font shorthand property fixed in IE11*/
    font-size: 13px;
    font-size: 0.81rem;
    font-family: 'Open Sans', Lucida Sans, Helvetica, Helvetica Neue, Arial;
    
}

h2 {
    font-size: 22px;
    font-size: 1.38rem;
    margin-bottom: 0.5em;
}

a {
    color: #0084B2;
}

a:link, a:visited {    
    text-decoration: none;
}

a:hover, a:active, a:focus {
    text-decoration: underline;
}

textarea {
    border-style: none; 
    border-color: transparent; 
    overflow: auto;   

}

#page-outer.telegram-bg {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    background-color: #008CB8;
}

#page-container {
    position: relative;
    width: 900px;
    height: 400px;
    margin: 130px auto 130px auto;
    background-color: white; 
}

.front-card {
    position: relative;
    overflow: auto;
}

.front-welcome {
    position: relative;
    float: left;
    width: 449px;
    height: 330px;
    margin: 35px 0 35px;
    border-right: 1px solid #eeeeee;
}

.front-signin {
    position: relative;
    float: right;
    padding: 135px 55px 0 70px;
    width: 324px;
}

.logo {
    position: absolute;
    top: 135px;
    left: 110px;
    width: 240px;
    height: 80px;
    /* background: url("../assets/img/tg-logo.png") no-repeat; */
}

.logo-sml {
    
    width: 105px;
    height: 35px;
    margin: 0 auto;
    /* background: url("../assets/img/tg-logo-sml.png") no-repeat; */
}

.logo-sml img {
    height: 100%;
    width: 100%;
}

.postmark {
    position: absolute;
    top: 25px;
    right: 0;
    width: 193px;
    height: 70px;
    background: url("../assets/img/postmark.png") no-repeat;
}

::-webkit-input-placeholder {
    color: black;
}

:-moz-placeholder { /* Firefox 18- */
    color: black;
}

::-moz-placeholder {  /* Firefox 19+ */
    color: black;
}

:-ms-input-placeholder {  
    color: black;
}

.username input, .password input {
    width: 100%;
    height: 25px;
    border: none; 
    border-bottom: 1px solid #eeeeee;   
    margin: 5px 0;
}

.vcenter {
    display: inline-block;
    width: 100%;
    margin: 20px 0 20px;
    line-height: 2;
}

button {
    /*position: relative; */
    display: inline-block;
    float: left;
    border: 1px solid #0084B2;
    background-color: white;
    font-weight: bold;
    color: #0084B2;
    padding: 5px 10px 5px 10px;
    outline: none; /* should only change with :focus warning */
}

button.follow {
    margin: 1em;
    float: none;
}


.recover-signup {
    position: relative;
    display: block;
    float: right;
}

#page-container.username {
    position: relative;
    width: 600px;
    height: auto;
    margin: 0 auto;
}

header {
    position: relative;
    height: 65px;
    background: url("../assets/img/header-bg.png") repeat-x;
}

header div {
    position: relative; 
    padding: 0 24px; 
    line-height: 49px; height: 49px;
}

header div > * {
    display: inline-block;
    vertical-align: middle;
    margin : 0;
}

header div.home {
    float: left;
}

header div.user-link {
    float: right;
}

header h4 {
    padding-left: 8px;
}

nav {
    position: relative;
    box-sizing: border-box;
    width: 100%;
    border-top: 1px solid #EEEEEE;
    border-bottom: 1px solid #EEEEEE;
}

nav ul {
    position: relative;
    padding: 0;
    margin: 0 20% 0 20%;
    float: left;
    width: 60%;
    height: 48px;
    
}

nav ul li {
    float: left;
    font-size: 1.5em;
    color: #0084B2;
    padding: 0.5em 1em;
}

nav ul li:hover {
    text-decoration: none;
    border-bottom: 3px solid #0084B2;;
}

nav ul li a:hover {
    text-decoration: none;
}

section.post {
    border-bottom: 1px solid #EEEEEE;
}


.char-limit {
    color: red;
}

section.post div {
    float: left;
    position: relative;
    text-align:left; 
}

section.post div:first-child {
    padding: 1.5em 2em; 
    width: 40px
} 

section.post div:last-child {
    width: 496px
} 

section.post img {
    display:block; 
    height: 45px; 
    width: 45px
}

section.post ul {
    padding: 0;
}

section.post ul li {   
    float: left;
    padding: 0 1em 1em 0;
    list-style-type: none;
}

section.post ul li span { 
    display: block;
    margin-top: -3px;
}


/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 35em) {

}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

